--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -43,6 +43,16 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0",
-    "com.unity.nuget.newtonsoft-json": "3.2.2"
-  }
+    "com.unity.nuget.newtonsoft-json": "3.2.2",
+    "com.cysharp.unitask": "2.5.10"
+  },
+  "scopedRegistries": [
+    {
+      "name": "OpenUPM",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.cysharp"
+      ]
+    }
+  ]
 }
